try no3 -fix white space

--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ body
 .container{
 /*  padding-top: 7%;*/
   text-align: center;
-  padding: 5% 0 1% 0;
+  padding: 5% 0 5% 0;
     display: flex;
   flex-direction: column;
 
@@ -118,8 +118,10 @@ body
 .content{
   color: white;
   text-align: center;
+    width: 75%;
+    margin: auto;
     padding: 1% 0 1% 0;
-    margin: 3% 5% 2% 1%;
+/*    margin: 3% 5% 2% 1%;*/
   
 }
 
@@ -182,7 +184,6 @@ transform: translate(-5px, -1px);
 .footer{
     width: 50px;
     height: 50px;
-    padding-bottom: 2%;
     border: 1px solid rgba(16, 2, 63, 0.2);
     border-radius: 50%;
     background-color: red;
@@ -192,11 +193,16 @@ transform: translate(-5px, -1px);
 
 @keyframes myfirst {
     0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:50%; top:25px;}
-    50%  {background-color:blue; left:90%; top:-10px;}
-    75%  {background-color:green; left:50%; top:25px;}
+    25%  {background-color:yellow; left:50%; top:50px;}
+    50%  {background-color:blue; left:90%; top:0px;}
+    75%  {background-color:green; left:50%; top:50px;}
     100% {background-color:red; left:0px; top:0px;}
     }
+
+.extra{
+    height: 10%;
+    width: 100%;
+}
 
 
 /***********************************************************************************/
